# GameOfLife

./: .gitignore  CMakeLists.txt
.github/workflows/: tests.yml
src/: CMakeLists.txt
src/Window/: CMakeLists.txt
src/Window/include/: test.h
src/Window/src/: test.cpp
src/Window/tests/: CMakeLists.txt  test_tests.cpp
